[gd_scene load_steps=6 format=3 uid="uid://dpeyhi4f1jd78"]

[ext_resource type="Theme" uid="uid://cwahu64hfgl1x" path="res://resources/theme/MenuTheme.tres" id="1_tjl38"]
[ext_resource type="Script" path="res://scenes/menus/MainMenu.gd" id="2_jmfhq"]
[ext_resource type="Material" uid="uid://bqrgweusswkfh" path="res://scenes/menus/MenuBackground.tres" id="3_4e88n"]
[ext_resource type="Script" path="res://scenes/menus/SeedInput.gd" id="4_okwym"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1ilb"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_tjl38")
script = ExtResource("2_jmfhq")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
material = ExtResource("3_4e88n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GlobalMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Center" type="CenterContainer" parent="GlobalMargin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="GlobalMargin/Center"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="GlobalMargin/Center/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"BigTitle"
text = "GAME_NAME"

[node name="SubTitle" type="Label" parent="GlobalMargin/Center/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"SubTitle"
text = "GAME_TAGLINE"

[node name="HSeparator" type="HSeparator" parent="GlobalMargin/Center/VBox"]
layout_mode = 2
theme_override_constants/separation = 60
theme_override_styles/separator = SubResource("StyleBoxEmpty_t1ilb")

[node name="ContinueButton" type="Button" parent="GlobalMargin/Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../QuitButton")
text = "MAIN_CONTINUE_BUTTON"

[node name="StartButton" type="Button" parent="GlobalMargin/Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../QuitButton")
text = "MAIN_START_BUTTON"

[node name="SeedHBox" type="HBoxContainer" parent="GlobalMargin/Center/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="GlobalMargin/Center/VBox/SeedHBox"]
layout_mode = 2
text = "MAIN_SEED_LABEL"

[node name="SeedInput" type="LineEdit" parent="GlobalMargin/Center/VBox/SeedHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("4_okwym")

[node name="CreditsButton" type="Button" parent="GlobalMargin/Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../StartButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartButton")
text = "MAIN_CREDITS_BUTTON"

[node name="QuitButton" type="Button" parent="GlobalMargin/Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../CreditsButton")
focus_neighbor_right = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../CreditsButton")
text = "MAIN_QUIT_BUTTON"

[connection signal="pressed" from="GlobalMargin/Center/VBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="GlobalMargin/Center/VBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="text_changed" from="GlobalMargin/Center/VBox/SeedHBox/SeedInput" to="GlobalMargin/Center/VBox/SeedHBox/SeedInput" method="_on_text_changed"]
[connection signal="pressed" from="GlobalMargin/Center/VBox/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="GlobalMargin/Center/VBox/QuitButton" to="." method="_on_quit_button_pressed"]
